@@ -3,3 +3,4 @@ exportPattern("^[[:alpha:]]+")
 import("MASS")
 import('plotrix')
 import("sm")
+import("mapproj")
