@@ -15,6 +15,6 @@ Type: \tab Package\cr
 Version: \tab 1.9.5\cr
 Date: \tab 2015-06-10\cr
 License: \tab GPL-3 \cr
-Depends: \tab MASS, plotrix, sm \cr
+Depends: \tab MASS, plotrix, sm, mapproj \cr
 }
 }
